# my-trime

./: README.md
app/: build.gradle
app/src/main/assets/rime/: trime.yaml
app/src/main/java/com/osfans/trime/: KeyboardView.java
app/src/main/java/com/osfans/trime/ime/keyboard/: Event.java  Key.java  Keyboard.java  KeyboardView.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/cmake/: Boost.cmake  Capnproto.cmake  FindBoost.cmake  FindGlog.cmake  Iconv.cmake
